Fixed alignment for entity action anchors and responses

--- a/theme/base/css/display.css
+++ b/theme/base/css/display.css
@@ -673,7 +673,7 @@ padding-left:23px;
 
 .entity_actions a,
 .entity_actions p {
-padding:4px 4px 4px 26px;
+padding:4px 4px 1px 26px;
 }
 
 .entity_remote_subscribe {
